Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 4.14.0-rc1
Description
The default Debug build configuration for CMake projects does not have QML debugging and profiling option enabled, which it does for qmake projects.
For users, this appears as if QML debugging does not work, until they know to switch the "QML debugging and profiling" option from "Leave at Default" to "Enable"
Attachments
For Gerrit Dashboard: QTCREATORBUG-24988 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
325146,2 | CMake: Improve handling of QML Debugging and Profiling option | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |